Added post: Functional Pipeline Paradigm. Added highlight.js.

--- a/themes/corsair/layouts/partials/footer.html
+++ b/themes/corsair/layouts/partials/footer.html
@@ -3,5 +3,9 @@
   	<p>&copy; Adam Krieger 2014</p>
   	Twitter: <a href="https://twitter.com/AdamKrieger">@AdamKrieger</a>
   </footer>
+
+  <link rel="stylesheet" href="{{ "css/highlight/default.css" | absURL }}">
+  <script src="{{ "js/highlight.pack.js" | absURL }}"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
