--- a/themes/corsair/layouts/partials/header.html
+++ b/themes/corsair/layouts/partials/header.html
@@ -10,6 +10,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
 	<link rel="stylesheet" href="{{ "css/style.css"  | absURL }}"/>
 
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-66645426-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
+
 	<header>
 		<div id="headercontent">
 			<a href="{{ "index.html" | absURL }}">
@@ -19,7 +29,7 @@
 			</a>
 			<nav class="headerblock">
 				<ul>
-					<li><a href="about">About</a></li>
+					<li><a href="{{ "about" | absURL }}">About</a></li>
 				</ul>
 			</nav>
 		</div>
