--- a/themes/corsair/layouts/partials/header.html
+++ b/themes/corsair/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="utf-8" />
-	<title>{{ .Title }}</title>
+	<title>{{ .Title }} | AdamKrieger.ca</title>
 	<link rel="icon" type="image/png" href="{{ "img/favicon.png" | absURL }}"/>
 </head>
 <body>
