--- a/themes/corsair/layouts/post/single.html
+++ b/themes/corsair/layouts/post/single.html
@@ -1,35 +1,36 @@
 {{ partial "header.html" . }}
-  <section>
+  <section class="post">
     <h1 id="post-title">{{ .Title }}</h1>
 		<h2 id="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</h2>
     <a href="https://twitter.com/share" class="twitter-share-button" data-via="AdamKrieger" data-related="AdamKrieger" data-count="none">Tweet</a>
 
     {{ .Content }}
 
-    <hr />
+    <div class="post-footer">
+      <hr />
 
-    Like the article? <a href="https://twitter.com/share" class="twitter-share-button" data-via="AdamKrieger" data-related="AdamKrieger" data-count="none">Tweet</a>
+      Like the article? <a href="https://twitter.com/share" class="twitter-share-button" data-via="AdamKrieger" data-related="AdamKrieger" data-count="none">Tweet</a>
 
-    <div id="disqus_thread"></div>
+      <div id="disqus_thread"></div>
 
-    <script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-    </script>
+      <script type="text/javascript">!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+      </script>
 
-    <script type="text/javascript">
-      /* * * CONFIGURATION VARIABLES * * */
-      var disqus_shortname = '{{ .Site.DisqusShortname }}';
-      var disqus_identifier = '{{ .Params.id }}';
-      var disqus_title = '{{ .Title }}';
-      var disqus_url = 'http://www.adamkrieger.ca/post/{{ .Slug }}';
+      <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES * * */
+        var disqus_shortname = '{{ .Site.DisqusShortname }}';
+        var disqus_identifier = '{{ .Params.id }}';
+        var disqus_title = '{{ .Title }}';
+        var disqus_url = 'http://www.adamkrieger.ca/post/{{ .Slug }}';
 
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+    </div>
   </section>
 {{ partial "footer.html" . }}
