Added speaker post for nov 10, 2015.

--- a/themes/corsair/layouts/partials/footer.html
+++ b/themes/corsair/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 
   <footer>
-  	<p>&copy; Adam Krieger 2014</p>
+  	<p>&copy; Adam Krieger 2014-2015</p>
   	Twitter: <a href="https://twitter.com/AdamKrieger">@AdamKrieger</a>
   </footer>
 
