Added basic .net async post. Adjusted some css. Added link to title in list mode.

--- a/themes/corsair/layouts/index.html
+++ b/themes/corsair/layouts/index.html
@@ -2,11 +2,11 @@
   <section>
     {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
     {{ range $paginator.Pages }}
-      <h1 id="post-title">{{ .Title }}</h1>
+      <a class="post-readon" href="{{ .Permalink }}">
+        <h1 id="post-title">{{ .Title }}</h1>
+      </a>
       <h2 id="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</h2>
       <p class="post-summary">{{ .Summary }}</p>
-      <a class="post-readon" href="{{ .Permalink }}">Read on</a>
-      <br />
       <br />
     {{ end }}
 
