--- a/themes/corsair/layouts/partials/header.html
+++ b/themes/corsair/layouts/partials/header.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<link rel="stylesheet" href="{{ "css/normalize.css" | absURL }}"/>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'/>
 	<link rel="stylesheet" href="{{ "css/style.css"  | absURL }}"/>
 
 	<script>
